# wqio

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  .travis_coveragerc  CONTRIBUTING.md  LICENSE  Untitled.ipynb  check_wqio.py  codecov.yml  generate_vstasks.py  readme.md  readme.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: python-package.yml
.github/workflows/: check-test-coverage.yml  main.yml  python-package.yml  python-publish-pypi.yml  python-publish-testpypi.yml  python-publish.yml  python-runlinter.yml  python-runtests-basic.yml  python-runtests-img-comp.yml
conda.recipes/dev/: meta.yaml
conda.recipes/release/: meta.yaml
docs/: Makefile  api.rst  conf.py  dev.rst  index.rst  make.bat
docs/api/: bootstrap.rst  datacollections.rst  features.rst  hydro.rst  ros.rst  samples.rst  statistics.rst
docs/sphinxext/: plot_generator.py
examples/: README.txt  plot_color_palette.py  plot_colors.py
examples/datacollections/: README.txt  attributes_data.py  plot_attributes_stats.py
pybmp/core/: __init__.py  events.py  features.py
pybmp/testing/: testutils.py
pybmp/utils/: __init__.py  bootstrap.py  figutils.py  misc.py  probscale.py  ros.py
wqio/: __init__.py  bootstrap.py  datacollections.py  datasets.py  features.py  hydro.py  ros.py  samples.py  theil.py  validate.py  viz.py
wqio/algo/: __init__.py  bootstrap.py  fros.py  robustros.py  ros.py
wqio/core/: __init__.py  events.py  features.py  hydro.py  samples.py
wqio/data/: test_filter_storm_counts_output.csv  testdata.csv  teststorm_firstobs.csv  testtable.csv  (+2 more)
(+84 files in other folders)
