[metadata]
description-file = readme.rst

[tool:pytest]
pep8ignore =
    E501
    E131
    check_wqio.py ALL
    wqio/examples/* ALL
    wqio/tests/* E501
    wqio/tests/test_features.py E241
    wqio/tests/test_datacollections.py E241
    wqio/tests/test_ros.py E241
    docs/* ALL

markers =
    mpl_image_compare

[pep8]
max-line-length = 100

[isort]
profile=black
src_paths=wqio
# sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY"]
# # profile = "black"
# skip_gitignore = true
# force_to_top = ["true"]
# default_section = "THIRDPARTY"
# known_firstparty = ["wqio"]
