[metadata]
description-file = readme.rst

markers =
    mpl_image_compare

[pep8]
max-line-length = 100

[isort]
profile=black
src_paths=wqio
# sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY"]
# # profile = "black"
# skip_gitignore = true
# force_to_top = ["true"]
# default_section = "THIRDPARTY"
# known_firstparty = ["wqio"]
